<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ACTIVITIES_FRAGMENTS.user_management.AccountInformation"
    android:background="@drawable/background_login_register">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/account_info_tv06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/string_id_account_info_tv06"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_info_tv05" />

        <TextView
            android:id="@+id/account_info_tv11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/string_id_account_info_tv11"
            app:layout_constraintBaseline_toBaselineOf="@+id/account_info_tv06"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="right"
            app:layout_constraintStart_toEndOf="@+id/account_info_tv06" />

        <TextView
            android:id="@+id/account_info_tv01"
            android:layout_width="348dp"
            android:layout_height="44dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/string_id_account_info_tv01"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary01"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043" />

        <TextView
            android:id="@+id/account_info_tv02"
            android:layout_width="323dp"
            android:layout_height="34dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/string_id_account_info_tv02"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_info_tv01"
            app:layout_constraintVertical_bias="0.035" />

        <TextView
            android:id="@+id/account_info_tv04"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/string_id_account_info_tv04"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_info_tv14" />

        <TextView
            android:id="@+id/account_info_tv03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/string_id_account_info_tv03"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_info_tv02"
            app:layout_constraintVertical_bias="0.093" />

        <TextView
            android:id="@+id/account_info_tv05"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/string_id_account_info_tv05"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_info_tv04" />

        <TextView
            android:id="@+id/account_info_tv08"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/string_id_account_info_tv08"
            app:layout_constraintBaseline_toBaselineOf="@+id/account_info_tv03"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="right"
            app:layout_constraintStart_toEndOf="@+id/account_info_tv03" />

        <TextView
            android:id="@+id/account_info_tv09"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/string_id_account_info_tv09"
            app:layout_constraintBaseline_toBaselineOf="@+id/account_info_tv04"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="right"
            app:layout_constraintStart_toEndOf="@+id/account_info_tv04" />

        <TextView
            android:id="@+id/account_info_tv10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/string_id_account_info_tv10"
            app:layout_constraintBaseline_toBaselineOf="@+id/account_info_tv05"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.397"
            android:gravity="right"
            app:layout_constraintStart_toEndOf="@+id/account_info_tv05" />

        <TextView
            android:id="@+id/account_info_tv12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/string_id_account_info_tv12"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/account_info_tv14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_info_tv03"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/account_info_tv14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/string_id_account_info_tv14"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_info_tv12" />

        <TextView
            android:id="@+id/account_info_tv13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/string_id_account_info_tv13"
            app:layout_constraintBaseline_toBaselineOf="@+id/account_info_tv12"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="right"
            app:layout_constraintStart_toEndOf="@+id/account_info_tv12" />

        <TextView
            android:id="@+id/account_info_tv15"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/string_id_account_info_tv15"
            app:layout_constraintBaseline_toBaselineOf="@+id/account_info_tv14"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="right"
            app:layout_constraintStart_toEndOf="@+id/account_info_tv14" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>