<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_register"
    tools:context=".ACTIVITIES_FRAGMENTS.transaction_management.MakeATransaction">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/make_a_transaction_TV01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:gravity="left"
            android:text="@string/string_id_make_a_transaction_tv01"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/make_a_transaction_TV02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_a_transaction_TV01"
            tools:text="@string/string_id_make_a_transaction_tv02" />

        <TextView
            android:id="@+id/make_a_transaction_TV03"
            android:layout_width="190sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:gravity="left"
            android:text="@string/string_id_make_a_transaction_tv03"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/make_a_transaction_TV04"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_a_transaction_TV02" />

        <TextView
            android:id="@+id/make_a_transaction_TV04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:gravity="right"
            android:text="@string/string_id_make_a_transaction_tv04"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/make_a_transaction_TV03"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/make_a_transaction_TV03" />

        <TextView
            android:id="@+id/make_a_transaction_TV05"
            android:layout_width="190sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="left"
            android:text="@string/string_id_make_a_transaction_tv05"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/make_a_transaction_TV06"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_a_transaction_TV03" />

        <TextView
            android:id="@+id/make_a_transaction_TV06"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:gravity="right"
            android:text="@string/string_id_make_a_transaction_tv06"
            app:layout_constraintBaseline_toBaselineOf="@+id/make_a_transaction_TV05"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/make_a_transaction_TV05"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/make_a_transaction_TV07"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:gravity="left"
            android:text="@string/string_id_make_a_transaction_tv07"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_a_transaction_TV05" />

        <TextView
            android:id="@+id/make_a_transaction_TV08"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:gravity="left"
            android:text="@string/string_id_make_a_transaction_tv08"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/make_a_transaction_ET01"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_a_transaction_TV07" />

        <EditText
            android:id="@+id/make_a_transaction_ET01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/string_id_make_a_transaction_tv09"
            app:layout_constraintBaseline_toBaselineOf="@+id/make_a_transaction_TV08"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/make_a_transaction_TV08"
            android:gravity="right" />

        <TextView
            android:id="@+id/make_a_transaction_TV09"
            android:layout_width="160sp"
            android:layout_height="27dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:gravity="left"
            android:text="@string/string_id_make_a_transaction_tv10"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_a_transaction_TV08" />

        <EditText
            android:id="@+id/make_a_transaction_ET02"
            android:layout_width="177sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/string_id_make_a_transaction_tv11"
            app:layout_constraintBaseline_toBaselineOf="@+id/make_a_transaction_TV09"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/make_a_transaction_TV09"
            android:gravity="right" />

        <Button
            android:id="@+id/make_a_transaction_BTN01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button_transactions"
            android:text="@string/string_id_make_a_transaction_tv12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_a_transaction_ET02" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>